common.css: avoid global-close button causing scroll on mobile

--- a/src/common.css
+++ b/src/common.css
@@ -478,6 +478,11 @@ body.loading .page:target .page-footer > .loading-spinner {
         top: -5.5rem;
     }
 
+    .global-close::before {
+        /* avoid that the button overflows the page, causing vertical scrolling on mobile */
+        right: -1rem;
+    }
+
     .page {
         max-width: 100%;
     }
